<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="wine">#AC0808</color>
    <color name="grey">#746C6C</color>
    <color name="black">#000000</color>
    <color name="cyan">#95C9E0</color>
    <color name="blanco">#ffffff</color>
    <color name="marron">#61210B</color>

    <string name="instrucciones"><b>El juego consiste en despejar todas las casillas de una pantalla que no oculten una mina.
Algunas casillas tienen un número, este número indica las minas que suman todas las casillas circundantes. 
Si se descubre una casilla sin número indica que ninguna de las casillas vecinas tiene mina y estas se descubren automáticamente.
Si se descubre una casilla con una mina se pierde la partida. 
Se puede poner una marca en las casillas que el jugador piensa que hay minas para ayudar a descubrir la que están cerca.</b></string>
    <string name="facil_button">Nivel Principiante</string>
    <string name="moderado_button">Nivel Experimentado</string>
    <string name="dificil_button">Nivel Experto</string>
    <string name="back_button"> Atras </string>
    <string name="app_name">My Mine Sweeper</string>
    <string name="nwgame_button">Juego Nuevo</string>
    <string name="instruc_button">Instrucciones</string>
    <string name="rank_button">Ranking</string>
    <string name="exit_button">Salida</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nw_game_display">Juego Nuevo</string>
    <string name="title_activity_instruc_display">Instrucciones</string>
    <string name="title_activity_ranking_display">Ranking</string>
    <string name="title_activity_facil_game">FacilGameActivity</string>

</resources>
