<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buscaminas"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/nwgame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:background="@color/wine"
        android:text="@string/nwgame_button"
        android:textSize="30sp" />

    <Button
        android:id="@+id/rank_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruc_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:text="@string/rank_button" />

    <Button
        android:id="@+id/instruc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nwgame_button"
        android:layout_centerHorizontal="true"
        android:background="@color/grey"
        android:layout_marginTop="20dp"
        android:text="@string/instruc_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rank_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:text="@string/exit_button" />

</RelativeLayout>