<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NwGameDisplayActivity"
    android:background="@drawable/buscaminas" >

    <Button
        android:id="@+id/facil_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/facil_button"
        android:background="@color/cyan"
        android:onClick="juegoFacil" />

    <Button
        android:id="@+id/dificil_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moderado_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@color/cyan"
        android:text="@string/dificil_button"
        android:onClick="juegoModerado" />

    <Button
        android:id="@+id/moderado_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facil_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@color/cyan"
        android:text="@string/moderado_button"
        android:onClick="juegoDificil" />

    <Button
        android:id="@+id/back_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dificil_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@color/cyan"
        android:text="@string/back_button"
        android:onClick="backButton" />

</RelativeLayout>
